# ledd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ledd.service
examples/: off.sh  red.ledd  red.sh  red_blue.ledd  red_blue.sh  white.sh
include/: config.h  error.h  instruction.h  ledd.h
src/: ledd.c  main.c
